# Sabina-s-Recipes

./: .gitignore  pyproject.toml
auth/: urls.py
authe/: forms.py  urls.py  views.py
blog/: urls.py
blogs/: forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_blog_blog_author.py  0003_blog_blog_image.py
recipe_app/: urls.py
recipe_apps/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipe_apps/migrations/: 0001_initial.py  0002_food_food_author.py  0003_food_food_image.py
recipe_profile/: apps.py  urls.py
recipe_profiles/: apps.py  urls.py  views.py
recipe_user/: apps.py
recipe_users/: admin.py  apps.py  models.py
recipe_users/migrations/: 0001_initial.py  0002_recipeuser_profile_image.py
recipes/: settings.py  urls.py
templates/: base.html  blog.html  blog_view.html  generic_forms.html  index.html  login.html  navbar.html  profile.html  recipe.html  recipe_view.html  signup.html
